bugfix: SAMM-CLI aas generation: add samm:description to ConceptDescription
Changes:
- Remove description from Property;
- Add Property Description to Definition.

Fixes #434